# LibHelix

./: .gitignore  meson.build
docs/: editstorage_actions.txt
include/: FileHelper.hpp
scripts/: generate_10kb.sh
src/: File.cpp  File.hpp  Helix.cpp  Helix.hpp  main.cpp  types.hpp  util.cpp  util.hpp
subprojects/: libalphafile.wrap  libmlactions.wrap
